[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "earth2studio"
authors = [
  { name="NVIDIA PhysicsNeMo Team" },
]
description = "Open-source deep-learning framework for exploring, building and deploying AI weather/climate workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "cftime",
    "fsspec>=2024.2.0",
    "gcsfs",
    "h5py>=3.2.0",
    "h5netcdf>=1.0.0",
    "huggingface-hub>=0.27.0",
    "loguru",
    "netCDF4>=1.6.4,<1.7.3", # https://github.com/Unidata/netcdf4-python/issues/1438
    "nest_asyncio",
    "pygrib",
    "python-dotenv",
    "pandas<3.0", # https://github.com/esgf2-us/intake-esgf/issues/167
    "pyarrow>=14.0.0",
    "rich",
    "s3fs>=2023.5.0",
    "torch>=2.5.0",
    "tqdm>=4.65.0",
    "xarray[parallel]>=2023.1.0",
    "zarr>=3.1.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    "Intended Audience :: Science/Research",
    "Environment :: GPU",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    'Typing :: Typed',
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/NVIDIA/earth2studio"
Documentation = "https://nvidia.github.io/earth2studio"
Issues = "https://github.com/NVIDIA/earth2studio/issues"
Changelog = "https://github.com/NVIDIA/earth2studio/blob/main/CHANGELOG.md"

[project.optional-dependencies]
data = [
    "cdsapi>=0.7.5",
    "cfgrib >= 0.9.10.3",
    "eccodes>=2.38.0",
    "ecmwf-opendata>=0.3.3",
    "intake-esgf>=2025.9.26",
    "pandas<3.0", # https://github.com/esgf2-us/intake-esgf/issues/167
    "planetary-computer>=0.5.0",
    "globus-sdk<4.0.0", # TODO: Remove once intake-esgf updates
    "pystac-client>=0.9.0",
    "httpx==0.28.1",
    "rasterio>=1.3.9",
    "rioxarray>=0.15.5",
    "pyproj>=3.7.1", # TODO: pygrib imports this, so technically in core, to check
    "scipy>=1.15.2",
    "multi-storage-client[boto3,google-cloud-storage,fsspec]>=0.33.0",
]
perturbation = [
    "torch-harmonics>=0.7.4",
    "scipy>=1.15.2",
]
statistics = [
    "nvidia-physicsnemo>=1.0.1,<2.0",
    "pytz", # Remove on physicsnemo 2.0
]
utils = [
    "scipy>=1.15.2",
    "earth2grid",
]
serve = [
    # Core FastAPI dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    # Redis dependencies
    "redis>=5.0.0",
    "hiredis>=2.0.0",
    "rq>=1.15.0",
    # Metrics
    "prometheus_client>=0.17.0",
    # Additional utilities
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
    "hydra-core>=1.3.0",
]
# PX Models
ace2 = [
    "fme",
    "h5py<=3.14.0",
    "pandas>=2.3.2",
    "scipy>=1.15.2",
]
aifs = [
    "anemoi-models==0.5.1",
    "earthkit-regrid==0.4.0",
    "ecmwf-opendata>=0.3.3",
    "flash-attn",
]
aifsens = [
    "anemoi-models==0.5.1",
    "earthkit-regrid==0.4.0",
    "ecmwf-opendata>=0.3.3",
    "flash-attn",
]
atlas = [
    "natten",
    "timm",
    "torch-harmonics",
    "einops",
    "nvidia-physicsnemo>=1.3.0,<2.0",
    "pytz", # Remove on physicsnemo 2.0
]
aurora = [
    "microsoft-aurora>=1.6.0",
]
dlesym = [
    "nvidia-physicsnemo>=1.0.1,<2.0",
    "earth2grid",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "pytz", # Remove on physicsnemo 2.0
]
dlwp = [
    "nvidia-physicsnemo>=1.0.1,<2.0",
    "importlib_metadata",
    "pytz", # Remove on physicsnemo 2.0
]
fcn = [
    "nvidia-physicsnemo>=1.0.1,<2.0",
    "pytz", # Remove on physicsnemo 2.0
]
fcn3 = [
    "makani",
    "ruamel.yaml>=0.18.14",
    "scipy>=1.10.0",
    "torch-harmonics>=0.8.0",
    "moviepy",
    "pytz", # Remove on physicsnemo 2.0
]
fengwu = [
    "onnx",
    "onnxscript",
    "onnxruntime-gpu>=1.21.0",
]
fuxi = [
    "onnx",
    "onnxscript",
    "onnxruntime-gpu>=1.21.0",
]
graphcast = [
    "graphcast",
    "dm-haiku>=0.0.14",
    "jax[cuda12]>=0.4.26",
    "flax>=0.10.6",
    "dm-tree>=0.1.9",
]
interp-modafno = [
    "nvidia-physicsnemo>=1.0.1,<2.0",
    "pytz", # Remove on physicsnemo 2.0
]
pangu = [
    "onnx",
    "onnxscript",
    "onnxruntime-gpu>=1.21.0",
]
sfno = [
    "makani",
    "pynvml>=12.0.0",
    "ruamel-yaml>=0.18.10",
    "scipy>=1.10.0",
    "torch-harmonics>=0.8.0",
    "moviepy"
]
stormcast = [
    "einops>=0.8.1",
    "nvidia-physicsnemo>=1.0.1,<2.0",
    "nvtx>=0.2.11",
    "omegaconf>=2.3.0",
    "scipy>=1.15.2",
    "pyproj>=3.7.1",
    "pytz", # Remove on physicsnemo 2.0
]
stormscope = [
    "natten",
    "nvidia-physicsnemo==1.3.0",
    "nvtx>=0.2.11",
    "earth2studio[utils]",
    "pytz", # Remove on physicsnemo 2.0
]
# DX Models
cbottle = [
    "earth2grid",
    "cbottle ; python_full_version >= '3.12'",
]
climatenet = []
corrdiff = [
    "einops>=0.8.1",
    "nvidia-physicsnemo>=1.2.0,<2.0",
    "nvtx>=0.2.11",
    "scipy>=1.15.2",
    "pytz", # Remove on physicsnemo 2.0
]
cyclone = [
    "cucim-cu12>=25.4.0",
    "cupy-cuda12x<14.0.0", # 14.0.0 has some odd issue, thrust needs c++17, need to revisit
    "scikit-image>=0.25.2",
]
derived = []
precip-afno = [
    "nvidia-physicsnemo>=1.0.1,<2.0",
    "pytz", # Remove on physicsnemo 2.0
]
precip-afno-v2 = [
    "nvidia-physicsnemo>=1.0.1,<2.0",
    "pytz", # Remove on physicsnemo 2.0
]
solarradiation-afno = [
    "nvidia-physicsnemo>=1.0.1,<2.0",
    "pytz", # Remove on physicsnemo 2.0
]
windgust-afno = [
    "nvidia-physicsnemo>=1.0.1,<2.0",
    "pytz", # Remove on physicsnemo 2.0
]
# All, must not have conflicts
all = [
    "earth2studio[data,perturbation,statistics,utils]",
    "earth2studio[ace2,aifs,aifsens,atlas,aurora,dlesym,dlwp,fcn,fcn3,fengwu,interp-modafno,pangu,sfno,stormcast,stormscope,graphcast]",
    "earth2studio[cbottle,climatenet,corrdiff,precip-afno,cyclone,precip-afno-v2,solarradiation-afno,windgust-afno]",
]

# ==== UV configuration ====
[tool.uv]
conflicts = []
default-groups = ["dev", "build"]
# Needed for some packages that build with PEP 518
no-build-isolation-package = ["earth2grid", "flash-attn", "natten", "torch-harmonics"]
override-dependencies = []

[tool.uv.extra-build-dependencies]
earth2grid = ["setuptools", "torch"]
flash-attn = ["torch", "packaging", "ninja"]
natten = ["setuptools", "cmake", "torch"]

[tool.uv.sources]
cfgrib = { git = "https://github.com/NickGeneva/cfgrib.git", rev = "6a9af3173d7050b5fa5d221755f97e6ecb8c3433" } # https://github.com/ecmwf/cfgrib/issues/433
cbottle = { git = "https://github.com/NVlabs/cBottle.git", rev = "1d4435abe730d6b966e983633b466b345d60ac78" }
earth2grid = { git = "https://github.com/NVlabs/earth2grid.git", rev = "11dcf1b0787a7eb6a8497a3a5a5e1fdcc31232d3" }
makani = { git = "https://github.com/NVIDIA/makani.git", rev = "fd1a62b9f27aebbc793f0cbafd838a3811de43fd"}
graphcast = { git = "https://github.com/google-deepmind/graphcast.git", rev = "7077d40a36db6541e3ed72ccaed1c0d202fa6014" }
pytest-testmon = { git = "https://github.com/NickGeneva/pytest-testmon.git", rev = "48cd5ed1b67bf2f2bd9f63335389f262db472806" }
fme = { git = "https://github.com/ai2cm/ace.git", rev = "e211cad3e1a5cff0fa84e8d2f0ee67042eff3d4d" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[exclude.uv.workspace]
members = ["recipes/*"]

[dependency-groups]
build = [
    "hatchling",
    "ninja>=1.11.1.4",
    "setuptools>=70.0.0",
]
dev = [
    "black==24.1.0",
    "coverage>=6.5.0",
    "interrogate>=1.5.0",
    "hatch>=1.14.0",
    "mypy",
    "pre-commit",
    "pytest>=6.0.0",
    "pytest-cov",
    "pytest-timeout>=2.0.1",
    "pytest-skip-slow>=0.0.5",
    "pytest-testmon>=2.1.3",
    "pyyaml>=6.0",
    "types-requests",
    "ruff",
    "pytest-asyncio>=0.26.0",
    "tox>=4.32.0",
    "tox-uv>=1.29.0"
]
docs = [
    "cartopy",
    "matplotlib",
    "scipy",
    "sphinx-design",
    "sphinx>=6.0.0",
    "jupytext>=1.15.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-gallery>=0.12.0",
    "sphinx-togglebutton>=0.3.0",
    "myst-parser>=0.18.0",
    "sphinx-favicon>=1.0.1",
    "pydata-sphinx-theme==0.16.1"
]

[tool.hatch.version]
path = "earth2studio/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["earth2studio/**/*.py", "earth2studio/data/*.yaml"]
exclude = []

# ==== Ruff configuration ====
[tool.ruff]
# Enable flake8/pycodestyle (`E`), Pyflakes (`F`), flake8-bandit (`S`),
# isort (`I`), and performance 'PERF' rules.
select = ["E", "F", "S", "I", "PERF"]
fixable = ["I"]

# Never enforce `E402`, `E501` (line length violations),
# and `S311` (random number generators)
ignore = ["E501", "S311"]

# Exclude the examples and experimental folders
exclude = []

[tool.ruff.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files, and in `docs/*.py`.
"__init__.py" = ["F401"]
"docs/*.py" = ["F401"]
"examples/*.py" = ["E402"]
"recipes/**/*_notebook.py" = ["E402"]

# Ignore `S101` (assertions) in all `test` files.
"test/*.py" = ["S101"]
"serve/test/*.py" = ["S101"]

# ==== Pytest configuration ====
[tool.pytest.ini_options]
testpaths = ["test"]
norecursedirs = [".git", "third_party"]
# show extra info on xfailed, xpassed, and skipped tests
addopts = ["-vv", "-r", "xfXs"]
markers = [
    "slow: marks tests as slow (deselect with: -m 'not slow')",
    "cli: marks tests which run CLIs"
]
asyncio_mode = "strict"
# Need to persist testmon in different tox env (ngeneva fork)
testmon_ignore_system_packages = true

# ==== Coverage.py configuration (ran using pytest-cov) ====
# See: https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = false
concurrency = ["multiprocessing", "thread"]
source = ["earth2studio"]
omit = [
    "third_party/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]
exclude_also = [
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    # Don't complain about protocols:
    "@runtime_checkable",
    # Don't Complain about import catches for optional deps
    "except ImportError:",
]
omit = [
    # omit anything in a .local directory anywhere
    "test/*",
    "earth2studio/models/nn/*",
]
show_missing = true
# fail_under = 75

[tool.coverage.xml]
output = "e2studio.coverage.xml"

# ==== Interrogate configuration ====
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
fail-under = 95
color = true
omit-covered-files = false
verbose = 2
exclude = ["setup.py", "test/*", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]

# ==== MyPy configuration ====
# See: https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version = "3.12"
packages = ['earth2studio']
exclude = [
    'examples', 'test', 'docs', 'serve/test'
]
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
follow_imports = 'skip'
explicit_package_bases = true
