[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "earth2studio.serve.client"
dynamic = ["version"]
description = "Python client SDK for Earth2Studio REST API"
authors = [
    {name = "NVIDIA Scicomp Team"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "earth2studio",
    "weather",
    "forecasting",
    "climate",
    "machine learning",
    "api client",
    "ensemble forecasting",
    "diagnostic analysis"
]
dependencies = [
    "aiohttp>=3.8.0",
    "earth2studio>=0.9.0",
    "fsspec>=2021.6.0",
    "numpy>=1.21.0",
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "xarray>=0.19.0",
]

[project.optional-dependencies]
e2studio = [
    "torch>=2.10.0",
]
examples = [
    "matplotlib>=3.3.0",
    "nvidia-physicsnemo>=1.0.1,<2.0",
    "omegaconf>=2.3.0",
    "pytz",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["earth2studio/serve/client"]

[tool.hatch.build.targets.wheel.sources]
"earth2studio/serve/client" = "earth2studio/serve/client"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project.urls]
Homepage = "https://github.com/NVIDIA/earth2studio"
Documentation = "https://nvidia.github.io/earth2studio/"
Repository = "https://github.com/NVIDIA/earth2studio"
"Bug Reports" = "https://github.com/NVIDIA/earth2studio/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
    "ruff>=0.7.2",
]
